# reto-winter-2026-ithaka-backend

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CONTRIBUTING.md  Dockerfile  NOMBRES.txt  README.md  alembic.ini  api-spec-en.md  compose.yaml  pyproject.toml  requirements.txt  seed.py  sonar-project.properties
.github/workflows/: discord-notifications.yml  docker-build-prod.yml  notify-pr-opened.yml  sonarqube.yml
.gstack/: browse-audit.jsonl
alembic/: env.py
alembic/versions/: 0001_initial.py  19b03de0930a_create_core_tables.py  223393d05097_create_core_tables.py  415d72f19af6_initial_migration.py  88c7cddfcc44_create_core_tables.py  a1b2c3d4e5f6_update_schema_per_new_spec.py  b9af9ee8c7bd_create_core_tables.py
app/: main.py
app/api/: auth_api.py  cohort.py  cohort_api.py  comment.py  dashboard_api.py  deliverable_api.py  document.py  groups_api.py  health.py  materials.py  meetings_api.py  stage_api.py  students_api.py  tutors_api.py  users_api.py
app/core/: config.py  security.py
app/core/db/: base.py  seed.py  session.py
app/core/models/: __init__.py  assignment.py  cohort.py  comment.py  deliverable.py  document.py  enums.py  group.py  meeting.py  stage.py  student.py  support_material.py  tutor.py  user.py
app/utils/: __init__.py  datetime.py
k8s/: apisixroute.yaml  ci-rbac.yaml  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  postgres-secret.example.yaml  postgres.yaml  secret.example.yaml  secret.yaml  service.yaml
scripts/: entrypoint.sh  migration_cli.py  smoke_test.sh
src/ithaka_backend/: __init__.py  main.py
(+40 files in other folders)
