[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ithaka-backend"
version = "0.1.0"
description = "Backend API en Python con FastAPI"
dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.22.0",
  "pydantic>=2",
  "pydantic-settings",
  "fastapi[standard]",
  "sqlalchemy",
  "pymysql",
  "alembic",
]


[tool.setuptools.packages.find]
where = ["src"]


